# arke-server

./: .env  .gitignore  Cargo.toml  Dockerfile
.github/: build_server.yml
.github/workflows/: build_server.yml
.sqlx/: query-1e1324b2545b4bc8ee13efc16611aa18900e49252f7a848d05bc2ff8f4458215.json  query-38bf08f0ac4ee0059c2d960d35dacced922a10fb5dcee36d3f498102cd8e69f5.json  query-ec65320fa01bad2d76719f134a4095f17b43a81a84f93142ab88733f9365482e.json
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20230811113250_create-user-table.up.sql  20230812130937_add-user-keys.down.sql  20230812130937_add-user-keys.up.sql  20230829115530_add_one_time_prekeys.down.sql  20230829115530_add_one_time_prekeys.up.sql
src/: lib.rs  main.rs  server.rs  user.rs
src/crypto/: mod.rs
src/server/: command.rs  db.rs  mod.rs  state.rs
