[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
fern = "0.6.2"
log = "0.4.19"
humantime = "2.1.0"
dotenvy = "0.15.7"
sodiumoxide = "0.2.7"
rustls = "0.21.3"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal" }
rcgen = "0.11.1"
rustls-pemfile = "1.0.3"
webpki-roots = "0.24.0"
