[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
fern = "0.6.2"
log = "0.4.19"
humantime = "2.1.0"
dotenvy = "0.15.7"
sodiumoxide = "0.2.7"
tokio-rustls = "0.24.1"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal" }
rcgen = "0.11.1"
rustls-pemfile = "1.0.3"
webpki-roots = "0.24.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.1.1"
hex = "0.4.3"
