[package]
name = "arke-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "arke_api"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
fern = "0.6.2"
log = "0.4.19"
humantime = "2.1.0"
dotenvy = "0.15.7"
tokio-rustls = "0.24.1"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal" }
rustls-pemfile = "1.0.3"
webpki-roots = "0.24.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.102"
async-trait = "0.1.71"
macros = { path = "./macros" }
proc-macro2 = "1.0.66"
